--- a/README.Rmd
+++ b/README.Rmd
@@ -583,7 +583,7 @@ Please note the following caveats:
 
 - Plotting text (i.e., graphically rendering characters) is rarely a good idea. It typically doesn't scale (when changing the size of images) and cannot be recognized automatically (e.g., copied, indexed, or scraped). Hence, the corresponding **unikn** functions should only be used in contexts in which no better solutions are available or practical (e.g., when specifically creating images, or adding annotations to graphs). 
 
-- Like all templates, our offers are subject to constraints and limitations. 
+- Our templates ---\ just like all others\ --- are subject to constraints and limitations. 
 As a standard installation of\ R lacks the "Theinhardt" fonts, we can only mimic the official design specifications (in Arial, sans serif). 
 Nevertheless, the **unikn** package helps preventing common mistakes by novices (e.g., boxes or lines extending beyond text, or step-functions in multi-line titles) and can be customized and improved by expert users. 
 
